--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <link rel="stylesheet" href="common.css">
+        <link rel="stylesheet" href="./assets/css/common.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
         <link rel="stylesheet" href="./assets/css/mio-style.css">
-        <link rel="stylesheet" href="./assets/css/ila-style.css">
         <meta charset="utf-8">
         <title>Effects and other stuff</title>
     </head>
